--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "lambda": "^0.10.3",
+    "netlify": "^6.1.20",
+    "netlify-lambda": "^2.0.3",
+    "nodemon": "^2.0.7",
+    "serverless-http": "^2.7.0"
   }
 }
