--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "heroku": "^7.53.0",
     "lambda": "^0.10.3",
     "netlify": "^6.1.20",
     "netlify-lambda": "^2.0.3",
